--- a/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
+++ b/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "knex": "node --import tsx ./node_modules/.bin/knex",
+    "lint": "eslint src--ext .ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +15,15 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.13.14",
     "eslint": "^8.57.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "fastify": "^5.2.2"
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.2",
+    "http": "^0.0.1-security",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
