--- a/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
+++ b/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
-    "@types/node": "^22.13.14",
+    "@types/node": "^22.14.0",
     "eslint": "^8.57.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
@@ -24,6 +24,7 @@
     "fastify": "^5.2.2",
     "http": "^0.0.1-security",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.24.2"
   }
 }
