--- a/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
+++ b/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
@@ -14,8 +14,11 @@
   "description": "",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
+    "@types/supertest": "^6.0.3",
     "eslint": "^8.57.1",
+    "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
