--- a/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
+++ b/www/ignite/nodejs/aulas/02-api-rest-nodejs/package.json
@@ -23,6 +23,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
+    "sqlite3":"5.1.7",
     "vitest": "^3.1.1"
   },
   "dependencies": {
